card creation in js

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Library</title>
-	<script defer type="text/javascript" src="main.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<script defer type="text/javascript" src="asset/main.js"></script>
+	<link rel="stylesheet" href="asset/style.css">
 </head>
 
 <body>
 
-	<span>open console to use app for now </span>
+	<div class="main" id="main">
+	</div>
+	<div class="side" id="side">
+		<span class="button">+</span>
+	</div>
+
+
 </body>
 
 </html>
