book can be removed of library by using the delete button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 	<div class="main" id="main">
 	</div>
 	<div class="side" id="side">
-		<span class="button">+</span>
+		<span class="button" onclick="openModal()">+</span>
 	</div>
-
+	<dialog class="modal">
+		<form method="dialog">
+			<span>sahdakhd</span>
+			<button>OK</button>
+		</form>
+	</dialog>
 
 </body>
 
