svg creation made dynamically for card action

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 		<form method="dialog">
 			<div class="form_content">
 				<span class="form_title">ADD BOOK</span>
-				<label for="title">some text <input type="text" id="title_input" required></label>
-				<label for="author">some text <input type="text" id="author_input" required></label>
-				<label for="desc">some text <input type="text" id="desc_input" required></label>
+				<label for="title_input"><input type="text" id="title_input" placeholder="Title"
+						required></label>
+				<label for="author_input"><input type="text" id="author_input" placeholder="Author"
+						required></label>
+				<label for="desc_input"><input type="text" id="desc_input"
+						placeholder="Quick description" required></label>
 			</div>
 			<input type="submit" id="validate">
 		</form>
