book objects now store page number and isRead status, when a book is read card has a specific display

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 						required></label>
 				<label for="desc_input"><input type="text" id="desc_input"
 						placeholder="Quick description" required></label>
+				<label for="page_input"><input type="number" id="page_input" placeholder="Page Number"
+						required></label>
+				<label for="isRead_input">finished<input type="checkbox" id="isRead_input" value="true"
+						placeholder="finished book"></label>
 			</div>
 			<input type="submit" id="validate">
 		</form>
