added a searchbar and search function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<div class="searchzone"><input type="text" class="searchbar" onchange="searchBook(this)"></div>
 	<div class="cardzone" id="cardzone"></div>
 	<div class="infozone" id="infozone">
 		<span class="title_detail">detail</span>
