--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-	<div class="searchzone"><input type="text" class="searchbar" onchange="searchBook(this)"></div>
+	<div class="searchzone"><input type="text" class="searchbar"
+			placeholder="Search for an author or a book by title"></div>
 	<div class="cardzone" id="cardzone"></div>
 	<div class="infozone" id="infozone">
 		<span class="title_detail">detail</span>
